fix Jar mode does not work on non-well-sorted zip order or on non-regular path (such as paths contains spaces)